--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ li a{
     height: 30.0rem;
 }
 .title a{
-    color: white;
+    color: white!important;
 } 
 /*----------------------------------------------*/
 @media (max-width: 1200px)
