--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     scroll-behavior: smooth;
-    font-weight: normal;
+    font-weight: bold;
 }
 .html{
     font-size: 62.5%;
